[package]
name = "open-rc2k"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "dinput"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmem = "=4.0.0"
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.51.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
]

[dependencies.windows-sys]
version = "0.48.0"
features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO"]
